# NIR-math-ns

./: Bitcoin_history_data.csv  CMakeLists.txt  README.md  ai.cpp  ai.h  basedata.cpp  basedata.h  comparison.cpp  comparison.h  csveditor.cpp  csveditor.h  main.cpp  mainwindow.cpp  mainwindow.h  parametr.cpp  parametr.h  readcsv.cpp  readcsv.h  regressia.cpp  regressia.h
